[gd_scene load_steps=4 format=3 uid="uid://gangmember001"]

[ext_resource type="Script" path="res://scripts/npcs/faction_member.gd" id="1_faction_member"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(28, 28)

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_attack"]
radius = 50.0

[node name="GangMember" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_faction_member")

[node name="Sprite2D" type="Polygon2D" parent="."]
color = Color(0.2, 0.4, 0.9, 1)
polygon = PackedVector2Array(-14, -14, 14, -14, 14, 14, -14, 14)

[node name="DirectionIndicator" type="Polygon2D" parent="."]
color = Color(0.1, 0.2, 0.6, 1)
polygon = PackedVector2Array(-6, -18, 6, -18, 0, -26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_body")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_attack")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
